fix(tailwind): include global style to enable Alpine's x-cloak
The x-cloak directive hides the element until Alpine
has fully initialized, thus avoiding blips in
elements that are hidden by default using Alpine.
To enable this directive we add the global style.

--- a/cl/assets/tailwind/input.css
+++ b/cl/assets/tailwind/input.css
@@ -48,6 +48,9 @@
   td {
     @apply p-2;
   }
+  [x-cloak] {
+    display: none !important;
+  }
 }
 
 @tailwind components;
